[package]
name = "ltl-rs"
version = "0.1.0"
edition = "2021"
default-run= "ltl-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
fxhash = "0.2.1"
itertools = "0.13.0"
log = "0.4.20"
ordered-float = "4.2.1"
thiserror = "1.0.64"

[dev-dependencies]
rand = "0.8.5"
